--- a/ex09_555.rst
+++ b/ex09_555.rst
@@ -1,2 +1,8 @@
 实验九 555电路
 =====================================
+
+心得
+
+1. 焊接喇叭时，由于导线很轻，但喇叭又有磁性，很容易出现烙铁头一碰导线就动的情况。这时，可以用钳子夹住导线，用皮筋固定好，再进行焊接，非常稳固。
+
+2. 电阻脚很长，如果引脚彼此挨得近的话，可能会造成短路，使电路无法正常工作。这点在一开始应该先检查。
